2012-08-23  Emil A Eklund  <eae@chromium.org>

        Add saturation arithmetic support to FractionalLayoutUnit
        https://bugs.webkit.org/show_bug.cgi?id=94364

        Reviewed by Benjamin Poulain.

        Add support functions for saturated addition and subtraction.

        Test: TestWebKitAPI/Tests/WTF/SaturatedArithmeticOperations.cpp

        * GNUmakefile.list.am:
        * WTF.gypi:
        * WTF.pro:
        * WTF.vcproj/WTF.vcproj:
        * WTF.xcodeproj/project.pbxproj:
        * WTF/wtf/CMakeLists.txt:
        Add SaturatedArithmetic.h to build files.

        * wtf/SaturatedArithmetic.h: Added.
        (saturatedAddition):
        (saturatedSubtraction):
        Support functions for saturated addition/subtraction. Compares the signed
        bit of the values instead of using range checks to reduce branching.

        * wtf/Platform.h:
        Add ENABLE_SATURATED_LAYOUT_ARITHMETIC flag.

2012-08-23  Mark Rowe  <mrowe@apple.com>

        Roll back in the part of r126475 that I had rolled out.

        * wtf/FastMalloc.cpp:
        (WTF): Disable the -Wunused-private-field warning around the declaration of
        TCMalloc_Central_FreeListPadded since the padding is intentionally unused.
        Only disable the warning if we detect it is enabled, since the warning may not
        be supported by the version of Clang that is being used.

2012-08-23  Mark Rowe  <mrowe@apple.com>

        Roll out part of r126475 that breaks the build with older versions of Clang.

        * wtf/FastMalloc.cpp:

2012-08-23  Mark Rowe  <mrowe@apple.com>

        Make WTF build with the latest version of clang.

        Reviewed by Dan Bernstein.

        * wtf/FastMalloc.cpp:
        (WTF): Disable the -Wunused-private-field warning around the declaration of
        TCMalloc_Central_FreeListPadded since the padding is intentionally unused.
        (WTF::AdminRegionRecorder): Remove the unused m_reader member.